# HoTools

./: .gitignore  .releaseignore  AGENTS.md  CLAUDE.md  FastOperators.py  FastUpdate.py  README.md  ROADMAP_I18N.md  __init__.py  _test_jolt_headless.py  _test_jolt_rewind_headless.py  hotools.bat  package.py
.claude/: settings.json
.github/workflow/: release.yml
.github/workflows/: release.yml
AnimationTools/: __init__.py  actionProcess.py  rigidBodyPhysics.py
BoneTools/: __init__.py  boneCollision.py  boneCollisionArmature.py  boneDissolve.py  boneFan.py  boneFanSide.py  boneFanSingle.py  boneHumanoid.py  boneOperators.py  boneProperty.py  boneRename.py  boneSplit.py  boneTwist.py  boneUtils.py  humanoid_auto_mapping.py
BoneTools/MappingAssets/: pmx2vrc.json  vrm2pmx.json  vrm2rigfy.json  vrm2vrc.json
BoneTools/auxBone/: __init__.py  auxUtils.py  boneFan.py  boneFanSide.py  boneFanSingle.py  boneTwist.py  panel.py
BoneTools/deform_tag_presets/: ARP_base.csv
BoneTools/humanoidCorrectionBones/: __init__.py  correctionBones.py
Checker/: __init__.py  check.py  fix.py  overlayPreview.py
Checker/meshMirrorChecker/: __init__.py  fixOperator.py
Checker/objectChecker/: __init__.py  define.py  fixOperator.py
Exp_hogui/: __init__.py
Exp_hogui/app/: main_canvas.py
Exp_hogui/backup/: 1.py
Exp_hogui/core/: ui_context.py  ui_manager.py
Exp_hogui/demo_ui/: demo.py
Exp_hogui/rendering/: renderer.py
Exp_hogui/widgets/: __init__.py  base.py  button.py  colorpicker.py  dropdown.py  label.py  layout.py  menu.py  table.py
Exporter/: BoneCollectionExporter.py  BoneConstraintExporter.py  ConstraintAnalyzer.py  ConstraintSemantics.py  FbxExporter.py  UnityConstraintMapper.py  __init__.py
Exporter/AnimClipExport/: __init__.py  anim_yaml.py  export_op.py  interpolation.py  mapping.py  scan.py
Exporter/tests/: test_constraint_export.py
HoAssets/: CN.blend  CN.blend1  GN.blend  GN.blend1  blender_assets.cats.txt  blender_assets.cats.txt~
HoPie/: __init__.py
MeshTools/: __init__.py  boolean.py
ModTools/: __init__.py  texpacker.py  weight.py
NameMapping/: MappingTemplate.csv  __init__.py  humanoid_auto_mapping.py
OmniNode/: ARCHITECTURE.md  OmniNodePanel.py  __init__.py
OmniNode/NodeTree/: DataPool.py  FunctionCore.py  FunctionNode.py  FunctionNodeCore.py  GraphNode.py  NodeFactory.py  NodeSocket.py  NodeTree.py  Nodes.py  OmniCache.py  OmniCompiler.py  OmniCurve.py  OmniDebug.py  OmniExecutor.py  OmniIR.py  OmniMenuBind.py  OmniNode.py  OmniNodeConetxt.py  OmniNodeDraw.py  OmniNodeOperator.py  OmniNodeTree.py  (+10 more)
PhysicsTools/: __init__.py  collisionBasePose.py  collisionOperators.py  collisionPanel.py  collisionPreview.py  collisionProperty.py  collisionUtils.py  deltaOutput.py  meshClothBasePose.py  physicsOperators.py  physicsPanel.py  physicsProperty.py  physicsUtils.py
PropertyCurve/: __init__.py  definitions.py  drawing.py  icons.py  presets.py  sampling.py
Rbf/: __init__.py  transfer.py
ShapekeyTools/: __init__.py  manager.py  multiObjectFlow.py  operators.py  transfer.py
SpecialTools/: HoTools_IR综合使用说明.md  MN_IR使用说明.md  __init__.py  blender_live_inspector.py  compositor_node_ir.py  compositor_node_ir_ai.py  geometry_node_ir.py  geometry_node_ir_ai.py  ir_joint_ai.py  material_ir_ai.py  material_node_ir.py  object_scene_ir.py  object_scene_ir_ai.py
UvTools/: RTbaker.py  __init__.py  baker.py  image.py  operators.py
VertexColorTools/: __init__.py  bake_normal.py  ops_base.py  ops_templates.py  ops_utils.py  panel.py  properties.py  sync.py  utils.py
VertexGroupTools/: __init__.py  advancedList.py  vertexGroupOperators.py
_Lib/: README.md
_native/: CMakeLists.txt  CMakePresets.json  JOLT_BLENDER_COMPAT.md  README.md  build.bat  setup_extern.bat
_native/include/: hotools_mc2.hpp  hotools_mc2_bonecloth_io.hpp  hotools_mesh_xpbd.hpp  hotools_property_curve.hpp  hotools_spring_bone_vrm.hpp
_native/src/: hotools_native.cpp  jolt_rigid.cpp  mc2.cpp  mc2_api.hpp  mc2_bindings.cpp  mc2_bindings.hpp  mc2_bonecloth_io.cpp  mc2_context.cpp  mc2_context.hpp  mc2_context_core.cpp  mc2_context_frame_step.cpp  mc2_context_helpers.hpp  mc2_context_interaction.cpp  mc2_context_internal.hpp  mc2_context_readback.cpp  mc2_context_static.cpp  mc2_context_v0.cpp  mc2_context_v0.hpp  mc2_domain_cpu.cpp  mc2_domain_cpu.hpp  mc2_domain_cpu_bindings.cpp  mc2_fingerprint.cpp  mc2_frame_orientations.cpp  mc2_frame_orientations.hpp  mc2_kernels.cpp  mc2_kernels.hpp  mc2_self_collision.cpp  mc2_static_build.cpp  mc2_static_build.hpp  mc2_whole_domain_self.cpp  mc2_whole_domain_self.hpp  mesh_xpbd.cpp  property_curve.cpp  python_buffer_utils.hpp  spring_bone_vrm.cpp  spring_bone_vrm_bindings.cpp
_native/tests/: run_all.py  test_jolt_benchmark_thresholds.py  test_jolt_cross_abi_semantics.py  test_jolt_golden_semantics.py  test_jolt_rigid_native.py  test_jolt_semantic_matrix.py  test_jolt_soak_runner.py  test_mc2_angle_native.py  test_mc2_baseline_native.py  test_mc2_baseline_step_pose_native.py  test_mc2_blender_scene_parity.py  test_mc2_bone_frame_native.py  test_mc2_bone_static_native.py  test_mc2_bonecloth_io_native.py  test_mc2_center_frame_shift_native.py  test_mc2_collision_native.py  test_mc2_context_v0_native.py  test_mc2_context_v0_owner.py  test_mc2_display_native.py  test_mc2_domain_cpu_native.py  test_mc2_fingerprint_native.py  test_mc2_inertia_native.py  test_mc2_motion_native.py  test_mc2_neighbor_native.py  test_mc2_particle_frame_native.py  test_mc2_post_step_native.py  test_mc2_product_native_ownership.py  test_mc2_self_collision_native.py  test_mc2_solver_core_native.py  test_mc2_static_build_native.py  test_mc2_step_interpolation_native.py  test_mc2_tether_native.py  test_mc2_triangle_bending_native.py  test_mesh_xpbd_native.py  test_property_curve_native.py  test_spring_bone_vrm_native.py
exIcon/: __init__.py  exIcon.py  image.frag  image.vert
i18n/: __init__.py  manager.py
tools/: audit_mc2_architecture.py  build_release_zip.py  run_mc2_replacement_benchmark.ps1  run_mc2_v1_acceptance.ps1  run_mc2_v1_soak.ps1  verify_release_install.py
(+622 files in other folders)
